font-size  modified.

--- a/ftpProject/conf/app.conf
+++ b/ftpProject/conf/app.conf
@@ -10,7 +10,7 @@ SessionGCMaxLifetime = 600
 
 
 #FTP 配置
-FTP.log = "E:\goproject\log"
+FTP.log = "d:\goproject\log"
 #Session 超时配置
 Session.time = 60
 #数据库 配置
@@ -42,5 +42,5 @@ Log.level = 0
 #权限系统地址http://localhost:8080/AM/Api/rpmParam
 #Auth.ip = http://172.168.171.205:8080/AM/Api/ftpRequest
 #Auth.loginip = http://172.168.171.205:8080/AM/Api/rpmParam
-Auth.ip = http://localhost:8080/AM/Api/ftpRequest
-Auth.loginip = http://localhost:8080/AM/relogin
+Auth.ip = http://localhost:8089/AM/Api/ftpRequest
+Auth.loginip = http://localhost:8089/AM/relogin
